--- a/StyleF.css
+++ b/StyleF.css
@@ -27,6 +27,9 @@ p{
 li{
     list-style-type: none;
 }
+.container{
+    padding: 50px 0;
+}
 .row{
     width: 100%;
     max-width: 800px;
@@ -35,7 +38,12 @@ li{
 .text--purple{
     color: #6030b1;
 }
-
+section:nth-child(even){
+    background-color: #f8f8f8;
+}
+.section__title{
+    margin-bottom: 20px;
+}
 /*
 navigation bar
 */
@@ -130,5 +138,79 @@ ABOUT ME
 }
 .wave{
     display: inline-block;
-    animation: animate-wave 500ms infinite ease-in-out;
+    animation: animate-wave 500ms infinite ease-in-out  ;
+}
+/*
+TECH-STACK
+*/
+.language__img{
+width: 100%;
+max-width: 100px;
+transition: all 300ms;
+}
+.language:hover .language__img{
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+.language{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;    
+}
+.language-img--wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px 16px;
+}
+.language__list{
+    display: flex;
+    width: 100%;  
+    flex-wrap: wrap; 
+}
+.language__name{
+    position: absolute;
+    bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+    opacity: 0;
+}
+.language:hover .language__name{
+    transform: scale(1);
+    opacity: 1;
+}
+/*
+Projects
+*/
+.project__img{
+    width: 100%;
+    transition: all 500ms ease;
+}
+.project__wrapper{
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+}
+.project__wrapper::before{
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: opacity 450ms ease;
+}
+.project:hover .project__wrapper::before{
+    opacity: 0.7;
+}
+.project:hover .project__img{
+    transform: scale(1.07);
 }
