--- a/StyleF.css
+++ b/StyleF.css
@@ -6,6 +6,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 h1,h2,h3,h4,h5,h6{
     color: #242424;
     text-align: center;
@@ -17,6 +20,31 @@ h1{
 p{
     line-height: 1.5;
     font-size: 16px;
+}
+a{
+    text-decoration: none;
+    position: relative;
+}
+.link__hover-effect:after{
+    content:"";
+    position: absolute;
+    height: 3px;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+.link__hover-effect:hover:after{
+    width: 100%;
+    left: 0;
+}
+.link__hover-effect--white:after{
+    background-color: white;
+
+}
+.link__hover-effect--black:after{
+    background-color: black;
+
 }
 .flex{
     display: flex;
@@ -61,7 +89,6 @@ nav{
 }
 .nav__link--anchor{
     margin: 0 12px;
-    text-decoration: none;
     color: #242424;
     font-weight: 700px;
 }
@@ -126,7 +153,6 @@ ABOUT ME
     font-size: 20px;
     color: #242424;
     padding: 0 16px;
-    text-decoration: none;
 }
 .about-me__img--container{
     flex: 1;
@@ -185,19 +211,24 @@ transition: all 300ms;
 /*
 Projects
 */
+.project{
+    margin-bottom: 135px;
+}
+.project :last-child{
+    margin-bottom: 40px;
+}
 .project__img{
     width: 100%;
     transition: all 500ms ease;
 }
 .project__wrapper{
     display: flex;
-    box-shadow: 0 20px 80px rgba(0, 0, 0, 0);
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
     border-radius: 20px;
     overflow: hidden;
     position: relative;
-    z-index: 0;
 }
-.project__wrapper::before{
+.project__wrapper:before{
     content: "";
     position: absolute;
     top:0;
@@ -207,10 +238,106 @@ Projects
     background-color: #1c1d25;
     opacity: 0;
     transition: opacity 450ms ease;
+    z-index: 2;
+
 }
-.project:hover .project__wrapper::before{
+.project:hover .project__wrapper:before{
     opacity: 0.7;
+
+}
+
+.project:hover .project__description{
+    opacity: 1;
+    transform: translateY(-50%);
 }
 .project:hover .project__img{
     transform: scale(1.07);
+    filter: blur(5px);
+}
+.project__list{
+    padding-top: 40px;
+}
+.project__description{
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    max-width: 550px;
+    z-index:3;
+    opacity: 0;
+    transform: transform 450ms, opacity 300ms;
+}
+.project__description--title{
+    font-size: 40px;
+}
+.project__description--para{
+    margin: 16px 0;
+}
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--link{
+    text-align: center;
+    color: #fff;
+}
+/*
+FOOTER
+*/
+footer{
+    background-color: #242424;
+}
+.footer-logo--img{
+    width: 70px;
+    height: 70px;
+}
+.footer__row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+}
+.footer__social--link,
+.footer__copyright,.footer__logo--popper{
+    color: #fff;
+    
+}
+.footer__social--list{
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 28px;
+}
+.footer__logo--popper{
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+.footer__anchor{
+    position: relative;
+    margin-bottom: 20px;
+}
+.footer__anchor:hover .footer__logo--popper{
+    transform: translatex(60px);
+    opacity: 1;
+}
+@media(max-width: 768px){
+nav{
+    height: 68px;
+}
+h1{
+    font-size: 28px;
+}
+.about-me__info--para{
+    font-size: 18px;
+}
+.language{
+    width: calc(100%/3);
+}
 }
