--- a/StyleF.css
+++ b/StyleF.css
@@ -62,6 +62,7 @@ li{
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 12px;
 }
 .text--purple{
     color: #6030b1;
@@ -194,6 +195,7 @@ transition: all 300ms;
 .language__list{
     display: flex;
     width: 100%;  
+    justify-content: center;
     flex-wrap: wrap; 
 }
 .language__name{
