--- a/StyleF.css
+++ b/StyleF.css
@@ -343,7 +343,7 @@ h1{
 .language{
     width: calc(100%/3);
 }
-.Project__description--para{
+.project__description--para{
     font-size: 14px;
 }
 .project-description{
@@ -352,16 +352,29 @@ h1{
 }
 }
 /* small phones */
-@media(max-width: 480px){
+@media (max-width: 480px) {
     .nav__link:not(:last-child){
         display:none;
     }
-    .Project__description--para{
+    .project__description{
+        padding: 0;
+        left: 0;
+        width: 100%;
+    }
+    .project__description--para {
         display: none;
     }
-    .project__description--link{
+    .project__description--links{
         display: flex;
         justify-content: center;
     }
-    
+    .project__description--title{
+        font-size: 32px;
+        line-height: 1;
+        text-align: center;
+    }
+    .project__description--sub-title{
+        text-align: center;
+        margin: 12px 0;
+    }
 }
