--- a/StyleF.css
+++ b/StyleF.css
@@ -135,7 +135,20 @@ ABOUT ME
     border-radius: 50%;
     overflow: hidden;
     margin: 28px;
-  /*  box-shadow:0 8px 16px rgba(0,0,0,1);*/
+    box-shadow:0 8px 16px rgba(0,0,0,0.16);
+    margin-bottom: 28px;
+    animation: animate-profile-picture 800ms 200ms backwards;  
+}
+@keyframes animate-profile-picture{
+    0%{
+        transform: scale(0);
+    }
+    80%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 .about-me__picture{
     width: 100%;
@@ -146,14 +159,31 @@ ABOUT ME
 .about-me__info--para{
     font-size: 20px;
     margin-bottom: 28px;
+    animation: fade-up 650ms 400ms backwards;
+
 }
 .about-me__info--title{
     margin-bottom: 28px;
+    animation: fade-up 650ms 600ms backwards;
+
 }
 .about-me__link{
     font-size: 20px;
     color: #242424;
     padding: 0 16px;
+}
+.about-me__links{
+    animation: fade-up 650ms 800ms backwards;
+}
+@keyframes fade-up{
+    0%{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 .about-me__img--container{
     flex: 1;
@@ -162,6 +192,15 @@ ABOUT ME
 }
 .about-me__img{
     width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
+}
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .wave{
     display: inline-block;
